<resources>
    <string name="app_name">UAS Shabri</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wantRegister">Want to register?</string>
    <string name="clickHere">Click here</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="wantLogin">Already have account?</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="material">Material</string>
    <string name="machine">Machine</string>
    <string name="daily_report">Daily report</string>
    <string name="qr_scanner">QR scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="machine_list">Machine list</string>
    <string name="add_data">Add data</string>
    <string name="title_add_machine">Add machine</string>
    <string name="id">ID</string>
    <string name="last_maintenance">Last maintenance</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="placeholder">Placeholder</string>
    <string name="date">Date</string>
    <string name="title_edit_machine">Edit machine</string>
    <string name="material_list">Material list</string>
    <string name="title_add_material">Add material</string>
    <string name="weight">Weight (in grams)</string>
    <string name="qty">Quantity</string>
    <string name="title_edit_material">Edit Material</string>
    <string name="dailyreport_list">Daily report</string>
    <string name="title_add_dailyreport">Add daily report</string>
    <string name="create_by">Created by</string>
    <string name="plan_qty">Plan Qty</string>
    <string name="min_qty">Minimal Qty</string>
    <string name="today_qty">Today Qty</string>
    <string name="view_qr_report">View QR</string>
    <string name="title_edit_dailyreport">Edit daily report</string>
</resources>