<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/materialFragment"
            android:icon="@drawable/ic_material"
            android:title="@string/material" />

        <item
            android:id="@+id/machineFragment"
            android:icon="@drawable/ic_machine"
            android:title="@string/machine" />

        <item
            android:id="@+id/dailyreportFragment"
            android:icon="@drawable/ic_daily_report"
            android:title="@string/daily_report" />

        <item
            android:id="@+id/qrscannerFragment"
            android:icon="@drawable/ic_qr_scanner"
            android:title="@string/qr_scanner" />
    </group>
</menu>